--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .hero{
     height:100vh;
     width:100%;
-    background-image: url(../wallpapersden.com_close-planet_wxl.jpg);
+    background-image: url(wallpapersden.com_close-planet_wxl.jpg);
     background-size: cover;
     background-position: center;
 }
